proparse/src/test/resources/data/errors/test03.p
def var x1 as int.

dynamic-function ('foobar', x1).
dynamic-function('foobar2', )
